packages/ingresses/argocd-ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    # Ask external DNS to create a CNAME that routes to the appropriate tunnel
    external-dns.alpha.kubernetes.io/target: 84857ed2-8b07-461a-a4eb-486409328bce.cfargotunnel.com
    ingress.kubernetes.io/auth-secret: argo-sso
  labels:
    app.kubernetes.io/name: argocd-cloudflare
    app.kubernetes.io/component: edge
    app.kubernetes.io/part-of: autocloud
  name: argocd-cloudflare
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: citest.autokube.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - citest.autokube.net
      secretName: citest-autokube-net-tls
